# context7-local

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.agent/: README.md
.agent/artifacts/: current_diff.txt  last_diff.txt
.agent/artifacts/reports/: audit_report.md  security_audit.md
.agent/rules/: stack.md  testing.md
.agent/workflows/: lint-fix.md
docs/: deploy_windows.md
src/context7_local/: __init__.py  __main__.py  cache.py  chunker.py  embedder.py  github_client.py  scraper.py  server.py  tools.py
tests/: conftest.py  test_cache.py  test_chunker.py  test_github_client.py  test_scraper.py  test_tools.py
