[project]
name = "context7-local"
version = "0.1.0"
description = "Local MCP server providing Context7-compatible resolve-library-id and query-docs tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.2.0,<2",
    "httpx>=0.27.0,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "fastembed>=0.4.0,<1",
    "numpy>=2.0,<3",
]

[project.scripts]
context7-local = "context7_local:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context7_local"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit real GitHub API (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
